--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,6 +12,7 @@
 <ul class="nav">
     <li class="nav-item nav-link"><a href="/events">All Events</a></li>
     <li class="nav-item nav-link"><a href="/events/create">Create Event</a></li>
+    <li class="nav-item nav-link"><a href="/events/delete">Delete Event</a></li>
 </ul>
 </nav>
 </body>
