--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -3,7 +3,6 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>Create Event</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
 <form method="post" action="/events/create">
@@ -22,6 +21,17 @@
     <div class="form-group">
         <label>Contact Email
             <input th:field="${event.contactEmail}" class="form-control">
+        </label>
+        <p class="error" th:errors="${event.contactEmail}"></p>
+    </div>
+    <div class="form-group">
+        <label>Event Type
+            <select th:field="${event.type}" class="form-control">
+                <option th:each="type : ${eventTypes}"
+                        th:value="${type}"
+                        th:text="${type.displayName}"
+                ></option>
+            </select>
         </label>
         <p class="error" th:errors="${event.contactEmail}"></p>
     </div>
