--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,6 +15,8 @@
     <li class="nav-item nav-link"><a href="/events">All Events</a></li>
     <li class="nav-item nav-link"><a href="/events/create">Create Event</a></li>
     <li class="nav-item nav-link"><a href="/events/delete">Delete Event</a></li>
+    <li class="nav-item nav-link"><a href="/eventCategories">View Categories</a></li>
+    <li class="nav-item nav-link"><a href="/eventCategories/create">AddCategories</a></li>
 </ul>
 </nav>
 </body>
